# crates/basis_server/src/create_reserve_tests.rs
@@ -55,6 +55,7 @@ mod create_reserve_tests {
             },
             transaction: crate::config::TransactionConfig {
                 fee: 1000000,
+                        change_address: None,
             },
         });
 
